Core - new method to gen data
* Created a new method `getHashedHierarchicalData` that can be used to
 generate data for provisioning. It doesn't duplicated attributes data,
which was a problem with the old implementation.
* The method is meant for testing, it might change in the future.
